--- a/pom.xml
+++ b/pom.xml
@@ -76,19 +76,34 @@ limitations under the License.
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <!-- Plugin versions, so that they can get auto-updated by the versions plugin. -->
-    <maven-gpg-plugin-version>1.6</maven-gpg-plugin-version>
-    <codehaus-versions-maven-plugin-version>2.3</codehaus-versions-maven-plugin-version>
-    <jacoco-maven-plugin-version>0.7.9</jacoco-maven-plugin-version>
-    <nexus-staging-maven-plugin-version>1.6.7</nexus-staging-maven-plugin-version>
-    <maven-failsafe-plugin-version>2.19.1</maven-failsafe-plugin-version>
-    <maven-surefire-plugin-version>2.19.1</maven-surefire-plugin-version>
-    <maven-checkstyle-plugin-version>2.17</maven-checkstyle-plugin-version>
-    <maven-release-plugin-version>2.5.3</maven-release-plugin-version>
+
+    <jacoco-maven-plugin>0.7.9</jacoco-maven-plugin>
+    <plexus-compiler-javac-errorprone>2.8.1</plexus-compiler-javac-errorprone>
+    <error_prone_core>2.0.19</error_prone_core>
+
+    <maven-failsafe-plugin>2.20</maven-failsafe-plugin>
+    <maven-surefire-plugin>2.20</maven-surefire-plugin>
+    <maven-checkstyle-plugin>2.17</maven-checkstyle-plugin>
+    <maven-clean-plugin>3.0.0</maven-clean-plugin>
+    <maven-deploy-plugin>2.8.2</maven-deploy-plugin>
+    <maven-install-plugin>2.5.2</maven-install-plugin>
+    <maven-site-plugin>3.6</maven-site-plugin>
+    <maven-compiler-plugin>3.6.1</maven-compiler-plugin>
+    <maven-resources-plugin>3.0.2</maven-resources-plugin>
+    <maven-war-plugin>3.0.0</maven-war-plugin>
+    <maven-assembly-plugin>3.0.0</maven-assembly-plugin>
+    <maven-jar-plugin>3.0.2</maven-jar-plugin>
+    <maven-source-plugin>3.0.1</maven-source-plugin>
+    <maven-archetype-plugin>3.0.1</maven-archetype-plugin>
+
+    <maven-release-plugin>2.5.3</maven-release-plugin>
+    <nexus-staging-maven-plugin>1.6.8</nexus-staging-maven-plugin>
+    <versions-maven-plugin>2.3</versions-maven-plugin>
+    <maven-gpg-plugin>1.6</maven-gpg-plugin>
   </properties>
 
   <prerequisites>
-    <maven>3.3.9</maven>
+    <maven>3.5.0</maven>
   </prerequisites>
 
   <profiles>
@@ -100,7 +115,7 @@ limitations under the License.
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-source-plugin</artifactId>
-            <version>3.0.0</version>
+            <version>${maven-source-plugin}</version>
             <executions>
               <execution>
                 <id>attach-sources</id>
@@ -113,13 +128,12 @@ limitations under the License.
 
           <plugin>
             <artifactId>maven-archetype-plugin</artifactId>
-            <version>2.4</version>
+            <version>${maven-archetype-plugin}</version>
           </plugin>
 
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-gpg-plugin</artifactId>
-            <version>${maven-gpg-plugin-version}</version>
             <executions>
               <execution>
                 <id>sign-artifacts</id>
@@ -145,7 +159,7 @@ limitations under the License.
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.3</version>
+        <version>${maven-compiler-plugin}</version>
         <configuration>
           <compilerId>javac-with-errorprone</compilerId>
           <forceJavacCompilerUse>true</forceJavacCompilerUse>
@@ -154,14 +168,14 @@ limitations under the License.
           <dependency>
             <groupId>org.codehaus.plexus</groupId>
             <artifactId>plexus-compiler-javac-errorprone</artifactId>
-            <version>2.8</version>
+            <version>${plexus-compiler-javac-errorprone}</version>
           </dependency>
           <!-- override plexus-compiler-javac-errorprone's dependency on
                Error Prone with the latest version -->
           <dependency>
             <groupId>com.google.errorprone</groupId>
             <artifactId>error_prone_core</artifactId>
-            <version>2.0.15</version>
+            <version>${error_prone_core}</version>
           </dependency>
         </dependencies>
       </plugin>
@@ -170,7 +184,7 @@ limitations under the License.
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>${maven-surefire-plugin-version}</version>
+        <version>${maven-surefire-plugin}</version>
         <configuration>
           <trimStackTrace>false</trimStackTrace>
         </configuration>
@@ -179,7 +193,7 @@ limitations under the License.
         <!-- Integration / system tests -->
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
-        <version>${maven-failsafe-plugin-version}</version>
+        <version>${maven-failsafe-plugin}</version>
         <executions>
           <execution>
             <goals>
@@ -192,7 +206,7 @@ limitations under the License.
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-checkstyle-plugin</artifactId>
-        <version>${maven-checkstyle-plugin-version}</version>
+        <version>${maven-checkstyle-plugin}</version>
         <configuration>
           <configLocation>google-checks.xml</configLocation>
           <consoleOutput>true</consoleOutput>
@@ -217,12 +231,12 @@ limitations under the License.
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>versions-maven-plugin</artifactId>
-        <version>${codehaus-versions-maven-plugin-version}</version>
+        <version>${versions-maven-plugin}</version>
       </plugin>
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
-        <version>${jacoco-maven-plugin-version}</version>
+        <version>${jacoco-maven-plugin}</version>
         <executions>
           <execution>
             <goals>
