--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@ limitations under the License.
 
   <groupId>com.google.cloud.samples</groupId>
   <artifactId>shared-configuration</artifactId>
-  <version>1.0.3-SNAPSHOT</version>
+  <version>1.0.3</version>
   <packaging>pom</packaging>
 
   <name>${project.groupId}:${project.artifactId}</name>
@@ -59,7 +59,7 @@ limitations under the License.
     <connection>scm:git:git@github.com:GoogleCloudPlatform/java-repo-tools.git</connection>
     <developerConnection>scm:git:git@github.com:GoogleCloudPlatform/java-repo-tools.git</developerConnection>
     <url>git@github.com:GoogleCloudPlatform/java-repo-tools.git</url>
-    <tag>v1.0.3-alpha</tag>
+    <tag>v1.0.3</tag>
   </scm>
 
   <distributionManagement>
