--- a/test/pom.xml
+++ b/test/pom.xml
@@ -26,7 +26,7 @@ limitations under the License.
   <parent>
     <artifactId>shared-configuration</artifactId>
     <groupId>com.google.cloud.samples</groupId>
-    <version>1.0.3-SNAPSHOT</version>
+    <version>1.0.3</version>
     <relativePath>..</relativePath>
   </parent>
 
